[ FIX ][ v0.2.1 ] Fix dropdown z-index

--- a/lenses/study/static/style.css
+++ b/lenses/study/static/style.css
@@ -20,6 +20,7 @@
 
 .dropdown:hover .dropdown-content {
   display: block;
+  z-index: 100001;
 }
 
 .selection-buttons {
